--- a/sity.ipynb
+++ b/sity.ipynb
@@ -14,13 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "8db13e2b597b367f533b67b9a2d3880ef3ae97c68f9d666e4ca5c0de1232ce41"
-    }
-   }
+   "name": "python385jvsc74a57bd08db13e2b597b367f533b67b9a2d3880ef3ae97c68f9d666e4ca5c0de1232ce41",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
@@ -28,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
